# qrcode-rust

./: Cargo.toml  README.md
examples/: encode_image.rs  encode_string.rs  encode_svg.rs
src/: bits.rs  canvas.rs  cast.rs  ec.rs  lib.rs  optimize.rs  types.rs
src/render/: image.rs  mod.rs  string.rs  svg.rs  unicode.rs
