[package]
name = "rqcode"
description = "QR code encoder in Rust"
license = "MIT OR Apache-2.0"
version = "0.12.0"
edition = "2018"
authors = ["Juliette Cordor", "kennytm <kennytm@gmail.com>"]
keywords = ["qrcode"]
repository = "https://github.com/jewlexx/qrcode-rust"
rust-version = "1.61.0"

[dependencies]
image = { version = "0.24", default-features = false, optional = true }
checked_int_cast = "1"

[dev-dependencies]
image = "0.24"

[features]
default = ["image", "svg"]
bench = []
svg = []

[[bin]]
name = "qrencode"

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]
